[package]
name = "ev_slotmap"
version = "0.1.0"
authors = ["Kevin Guthrie <kevin.guthrie@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

readme = "README.md"
description = "A lock-free, eventually consistent, concurrent slot map."
repository = "https://github.com/rookandpawn/ev_slot_map.git"

keywords = ["slotmap","lock-free"]
categories = ["concurrency", "data-structures"]

[dependencies]
one_way_slot_map = "0.2.0"
slab = "0.4"
evmap = "10.0.2"

[dev-dependencies]
threadpool = "1.8.1"
